# agent-tool-call-audit

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: tool-calls.jsonl  tool-calls.txt
src/agent_tool_call_audit/: __init__.py  cli.py
tests/: test_cli.py
